# appflowy-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml  release.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
src/appflowy_mcp/: __init__.py  access.py  appflowy.py  blocks.py  config.py  server.py
tests/: conftest.py  test_access.py  test_appflowy.py  test_blocks.py  test_config.py  test_server.py
